# ROSS-VersusModel

./: .myModel3_main.c.swp  CMakeLists.txt  NotesConcepts.txt  myModel3.h  myModel3_main.c  scratchpad.c
BACKUP_TEMPLATE/: myModel3.c  myModel3.h
